--- a/templates/base.html
+++ b/templates/base.html
@@ -34,5 +34,10 @@
 <div class="container">
     {% block page_content %} {% endblock %}
 </div>
+{% endblock %}
 
+{% block scripts %}
+{{ super() }}
+{{ moment.include_moment() }}
+{{ moment.locale('zh-cn') }}
 {% endblock %}
