--- a/templates/index.html
+++ b/templates/index.html
@@ -1,11 +1,9 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Index</title>
-</head>
-<body>
-    <h1>Hello World!</h1>
+{% extends "base.html" %}
 
-</body>
-</html>
+{% block page_content %}
+<div class="page-header">
+    <h1>Hello World!</h1>
+</div>
+<p>The local date and time is {{ moment(current_time).format('LLL') }}.</p>
+<p>That was {{ moment(current_time).fromNow(refresh=True) }}.</p>
+{% endblock %}
