--- a/templates/user.html
+++ b/templates/user.html
@@ -2,6 +2,6 @@
 
 {% block page_content %}
     <div class="page-header">
-        <hi>Hello, {{ name|title }}!</hi>
+        <h1>Hello, {{ name|title }}!</h1>
     </div>
 {% endblock %}
