--- a/templates/index.html
+++ b/templates/index.html
@@ -3,7 +3,13 @@
 
 {% block page_content %}
 <div class="page-header">
-    <h1>Hello World!</h1>
+    <h1>
+        {% if name %}
+            Hello {{ name|title }}!
+        {% else %}
+            Hello Stranger!
+        {% endif %}
+    </h1>
 </div>
 {{ wtf.quick_form(form) }}
 <p></p>
