--- a/templates/index.html
+++ b/templates/index.html
@@ -3,13 +3,19 @@
 
 {% block page_content %}
 <div class="page-header">
-    <h1>
+    <h1>Hello
         {% if name %}
-            Hello {{ name|title }}!
+            {{ name|title }}
         {% else %}
-            Hello Stranger!
+            Stranger
         {% endif %}
-    </h1>
+    !</h1>
+    {% if not known %}
+        <p>Pleased to meet you!</p>
+    {% else %}
+        <p>Happy to see you again!</p>
+    {% endif %}
+
 </div>
 {{ wtf.quick_form(form) }}
 <p></p>
