add auth blueprint, rename Flask to NaBlog

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -6,7 +6,7 @@
 <link rel="icon" href="{{ url_for('static', filename='favicon.ico') }}" type="image/x-icon">
 {% endblock %}
 
-{% block title %}Flask Blog{% endblock %}
+{% block title %}NaBlog{% endblock %}
 
 {% block navbar %}
 <div class="navbar navbar-inverse" role="navigation">
@@ -19,7 +19,7 @@
                 <span class="icon-bar"/>
                 <span class="icon-bar"/>
             </button>
-            <a class="navbar-brand" href="/">Flask Blog</a>
+            <a class="navbar-brand" href="/">NaBlog</a>
         </div>
         <div class="navbar-collapse collapse">
             <ul class="nav navbar-nav">
