--- a/app/templates/auth/login.html
+++ b/app/templates/auth/login.html
@@ -1,4 +1,5 @@
 {% extends "base.html" %}
+{% import "bootstrap/wtf.html" as wtf %}
 
 {% block title %}NaBlog - Login{% endblock %}
 
@@ -6,5 +7,7 @@
 <div class="page-header">
     <h1>Login</h1>
 </div>
-
+<div class="col-md-4">
+    {{ wtf.quick_form(form) }}
+</div>
 {% endblock %}
