combine multiple lines into 1 line for url_for auth.register

--- a/app/templates/auth/login.html
+++ b/app/templates/auth/login.html
@@ -9,11 +9,9 @@
 </div>
 <div class="col-md-4">
     {{ wtf.quick_form(form) }}
-</div>
-<p>
+    <p>
     New User?
-    <a href="{{ url_for('auth.register') }}">
-        Click here to register
-    </a>
+    <a href="{{ url_for('auth.register') }}">Click here to register</a>
 </p>
+</div>
 {% endblock %}
