--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -10,15 +10,27 @@
             Stranger
         {% endif %}
     !</h1>
-    {% if not known %}
-        <p>Pleased to meet you!</p>
-    {% else %}
-        <p>Happy to see you again!</p>
-    {% endif %}
-
 </div>
-{{ wtf.quick_form(form) }}
-<p></p>
-<p>The local date and time is {{ moment(current_time).format('LLL') }}.</p>
-<p>That was {{ moment(current_time).fromNow(refresh=True) }}.</p>
+<div>
+    {% if current_user.can(Permission.WRITE_ARTICLES) %}
+    {{ wtf.quick_form(form) }}
+    {% endif %}
+</div>
+<ul class="posts">
+    {% for post in posts %}
+    <li class="post">
+        <div class="profile-thumbnail">
+            <a href="{{ url_for('.user', username=post.author.username) }}">
+                <img class="img-rounded profile-thumbnail" src="{{ post.author.gravatar(size=40) }}">
+            </a>
+        </div>
+        <div class="post-date">{{ moment(post.timestamp).fromNow() }}</div>
+        <div class="post-author">
+            <a href="{{ url_for('.user', username=post.author.username) }}">{{ post.author.username }}</a>
+        </div>
+        <div class="post-body">{{ post.body }}</div>
+    </li>
+    {% endfor %}
+</ul>
+
 {% endblock %}
