--- a/app/templates/user.html
+++ b/app/templates/user.html
@@ -15,18 +15,14 @@
                 {% endif %}
             </p>
             {% endif %}
-
             {% if current_user.is_administrator() %}
             <p><a href="mailto:{{ user.email }}">{{ user.email }}</a></p>
             {% endif %}
-
             {% if user.about_me %}<p>{{ user.about_me }}</p>{% endif %}
-
             <p>
                 Member since {{ moment(user.member_since).format('L') }}.<br>
                 Last seen {{ moment(user.last_seen).fromNow() }}.
             </p>
-
             <p>
                 {% if user == current_user %}
                 <a class="btn btn-default" href="{{ url_for('.edit_profile') }}">Edit Profile</a>
@@ -36,6 +32,8 @@
                     Edit Profile [Admin]</a>
                 {% endif %}
             </p>
+            <h3>Posts by {{ user.username }}</h3>
+            {% include '_posts.html' %}
         </div>
     </div>
 {% endblock %}
