--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -12,7 +12,7 @@
     !</h1>
 </div>
 <div>
-    {% if current_user.can(Permission.WRITE_ARTICLES) %}
+    {% if current_user.can(Permission.WRITE) %}
     {{ wtf.quick_form(form) }}
     {% endif %}
 </div>
