--- a/app/templates/user.html
+++ b/app/templates/user.html
@@ -1,4 +1,5 @@
 {% extends "base.html" %}
+{% import "_macros.html" as macros %}
 
 {% block title %}NaBlog - {{ user.username }}{% endblock %}
 
@@ -34,6 +35,9 @@
             </p>
             <h3>Posts by {{ user.username }}</h3>
             {% include '_posts.html' %}
+            <div class="pagination">
+                {{ macros.pagination_widget(pagination, '.user', username=user.username) }}
+            </div>
         </div>
     </div>
 {% endblock %}
