--- a/app/templates/_posts.html
+++ b/app/templates/_posts.html
@@ -10,12 +10,17 @@
         <div class="post-author">
             <a href="{{ url_for('.user', username=post.author.username) }}">{{ post.author.username }}</a>
         </div>
-        <div class="post-body">
+        <div class="post-content">
             {% if post.body_html %}
                 {{ post.body_html }}
             {% else %}
                 {{ post.body }}
             {% endif %}
+            <div class="post-footer">
+                <a href="{{ url_for('.post', id=post.id) }}">
+                    <span class="label label-default">Permalink</span>
+                </a>
+            </div>
         </div>
     </li>
     {% endfor %}
