--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -17,7 +17,7 @@
     {{ wtf.quick_form(form) }}
     {% endif %}
 </div>
-{% include '_posts.html' %}
+{% include "_posts.html" %}
 <div class="pagination">
     {{ macros.pagination_widget(pagination, '.index') }}
 </div>
