--- a/app/templates/user.html
+++ b/app/templates/user.html
@@ -34,7 +34,7 @@
                 {% endif %}
             </p>
             <h3>Posts by {{ user.username }}</h3>
-            {% include '_posts.html' %}
+            {% include "_posts.html" %}
             <div class="pagination">
                 {{ macros.pagination_widget(pagination, '.user', username=user.username) }}
             </div>
