--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -4,13 +4,8 @@
 
 {% block page_content %}
 <div class="page-header">
-    <h1>Hello
-        {% if current_user.is_authenticated %}
-            {{ current_user.username|title }}
-        {% else %}
-            Stranger
-        {% endif %}
-    !</h1>
+    <h1>Hello,
+        {% if current_user.is_authenticated %}{{ current_user.username }}{% else %}Stranger{% endif %}!</h1>
 </div>
 <div>
     {% if current_user.can(Permission.WRITE) %}
